--- a/src/components/App.css
+++ b/src/components/App.css
@@ -18,7 +18,7 @@
 
 .usersCards {
 	width: 100%;
-	padding-top: 5em;
+	padding-top: 2em;
 	display: flex;
 	justify-content: space-around;
 	flex-wrap: wrap;
@@ -39,12 +39,18 @@
 	to {text-shadow: 0 0 3px black;}
 }
 
-@keyframes moves {
-	from { transform: translateX(30px) }
-	50% { transform: translateX(-30px) }
-	to { transform: translateX(0px) }
-}
+/*@keyframes moves {*/
+	/*from { transform: translateX(30px) }*/
+	/*50% { transform: translateX(-30px) }*/
+	/*to { transform: translateX(0px) }*/
+/*}*/
 
-@keyframes rotates {
-	from { transform: rotate(720deg) }
+/*@keyframes rotates {*/
+	/*from { transform: rotate(720deg) }*/
+/*}*/
+
+.userActions {
+	padding-top: 20px;
+	display: flex;
+	justify-content: space-around;
 }
