--- a/src/components/card/index.scss
+++ b/src/components/card/index.scss
@@ -1,5 +1,5 @@
 .user-card {
-  /*animation: rotates 2s infinite ease-in-out;*/
+  //animation: rotates 2s infinite ease-in-out;
   &__actions {
     padding-top: 20px;
     display: flex;
@@ -12,13 +12,7 @@
   }
 }
 
-@keyframes shadow {
-  from {text-shadow: 0 0 3px black;}
-  50% {text-shadow: 0 0 30px black;}
-  to {text-shadow: 0 0 3px black;}
-}
-
-.cards {
+.users-cards {
   width: 100%;
   padding-top: 2em;
   display: flex;
@@ -26,23 +20,12 @@
   flex-wrap: wrap;
 }
 
-//.userCard:hover {
-//  transform: rotate(-15deg);
-//  animation: shadow 2s infinite ease-in-out;
-//}
+@keyframes shadow {
+  from {text-shadow: 0 0 3px black;}
+  50% {text-shadow: 0 0 30px black;}
+  to {text-shadow: 0 0 3px black;}
+}
 
-/*@keyframes moves {*/
-/*from { transform: translateX(30px) }*/
-/*50% { transform: translateX(-30px) }*/
-/*to { transform: translateX(0px) }*/
-/*}*/
-
-/*@keyframes rotates {*/
-/*from { transform: rotate(720deg) }*/
-/*}*/
-
-//.user-card__actions {
-//  padding-top: 20px;
-//  display: flex;
-//  justify-content: space-around;
-//}
+@keyframes rotates {
+  from { transform: rotate(720deg) }
+}
