--- a/src/components/content/index.css
+++ b/src/components/content/index.css
@@ -1,17 +1,17 @@
-.table {
-  padding-top: 30px;
-  width: 100%; }
-  .table__title {
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+  .content__buttons {
+    width: 20%;
+    padding-top: 20px;
     display: flex;
-    justify-content: center;
-    font-weight: bold;
-    font-size: 26px; }
-  .table__headers * {
-    flex-basis: 100%;
-    flex-grow: 1;
-    text-align: center; }
-
-.table__headers__id {
-  flex-basis: 100%;
-  flex-grow: 1;
-  text-align: center; }
+    justify-content: space-around; }
+  .content__users-cards {
+    width: 100%;
+    padding-top: 2em;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    animation: fade_out 5s infinite; }
