--- a/src/components/content/index.scss
+++ b/src/components/content/index.scss
@@ -1,26 +1,23 @@
-.table {
-	padding-top: 30px;
-	width: 100%;
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
-  &__title {
+  &__buttons {
+    width: 20%;
+    padding-top: 20px;
     display: flex;
-    justify-content: center;
-    font-weight: bold;
-    font-size: 26px;
+    justify-content: space-around;
   }
 
-  &__headers {
-    * {
-      flex-basis: 100%;
-      flex-grow: 1;
-      text-align: center;
-    }
-   }
-}
-
-.table__headers__id {
-  flex-basis: 100%;
-  flex-grow: 1;
-  text-align: center;
+  &__users-cards {
+    width: 100%;
+    padding-top: 2em;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    animation: fade_out 5s infinite;
+  }
 }
 
